# wow-companion

./: .gitattributes  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml  installer.yml  push-notify.yml  release.yml
docs/: roadmap-research.md  updater.md
scripts/: bump-version.mjs  check-versions.mjs  fetch-static-data.mjs  fetch-static-data.test.mjs  launch.mjs  make-latest-json.mjs  make-latest-json.test.mjs  re-vendor.mjs  versions.mjs  versions.test.mjs
src/: App.css  App.test.tsx  App.tsx  appIcons.test.ts  contrast.test.ts  cspConfig.test.ts  main.tsx  updaterConfig.test.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: README.md
src-tauri/src/: botops.rs  lib.rs  main.rs  warband.rs
src/components/: Achievements.test.tsx  Achievements.tsx  AuctionHouse.test.tsx  AuctionHouse.tsx  BotOps.test.tsx  BotOps.tsx  CharacterDetail.test.tsx  CharacterDetail.tsx  CharacterLookup.test.tsx  CharacterLookup.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FixThesePanel.test.tsx  FixThesePanel.tsx  GuildDetail.test.tsx  GuildDetail.tsx  GuildLookup.test.tsx  GuildLookup.tsx  ItemPopover.test.tsx  ItemPopover.tsx  PaperDoll.test.tsx  PaperDoll.tsx  RealmStatus.test.tsx  RealmStatus.tsx  Settings.test.tsx  Settings.tsx  Skeleton.test.tsx  Skeleton.tsx  Sparkline.test.tsx  Sparkline.tsx  Tabs.test.tsx  Tabs.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toaster.test.tsx  Toaster.tsx  TokenPrice.test.tsx  TokenPrice.tsx  (+8 more)
src/lib/: achievements.test.ts  achievements.ts  auctions.test.ts  auctions.ts  auth.test.ts  auth.ts  bnet.ts  botops.ts  buildId.test.ts  buildId.ts  collections.test.ts  collections.ts  gearCheck.test.ts  gearCheck.ts  gearFix.test.ts  gearFix.ts  persist.test.tsx  persist.ts  queries.test.ts  queries.ts  queryClient.test.ts  queryClient.ts  raids.test.ts  raids.ts  region.test.ts  region.ts  reputations.test.ts  reputations.ts  retry.test.ts  retry.ts  slots.ts  slug.test.ts  slug.ts  specializations.test.ts  specializations.ts  theme.test.tsx  theme.ts  toast.test.ts  toast.ts  types.test.ts  (+22 more)
src/test/: mocks.ts  setup.ts  utils.tsx
