[package]
name = "wow-companion"
version = "0.1.0"
description = "WoW Companion — a Battle.net Web API desktop client"
authors = ["roshne"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wow_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Data-API requests are made from Rust (via the HTTP plugin) so they bypass webview CORS.
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OAuth token exchange (the client secret never leaves Rust).
reqwest = { version = "0.12", features = ["json"] }
# OS-native secret storage (Windows Credential Manager). For macOS/Linux builds, also enable
# the "apple-native" / "sync-secret-service" features respectively.
keyring = { version = "3", features = ["windows-native"] }
# Read the Warbandeer addon's SavedVariables (a Lua table literal) via an embedded, sandboxed
# Lua VM. `vendored` builds Lua from source (no system Lua needed).
mlua = { version = "0.10", features = ["lua54", "vendored"] }
