[package]
name = "wow-companion"
version = "0.5.0"
description = "WoW Companion — a Battle.net Web API desktop client"
authors = ["roshne"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wow_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Data-API requests are made from Rust (via the HTTP plugin) so they bypass webview CORS.
tauri-plugin-http = "2"
# In-app updates: check a signed manifest, download + install the next installer, then relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OAuth token exchange (the client secret never leaves Rust).
reqwest = { version = "0.12", features = ["json"] }
# Read the Warbandeer addon's SavedVariables (a Lua table literal) via an embedded, sandboxed
# Lua VM. `vendored` builds Lua from source (no system Lua needed); `serialize` enables
# `LuaSerdeExt::from_value` for declarative deserialization into typed structs.
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# OS-native secret storage. The backend is target-specific because each platform pulls a
# different keyring feature (and Linux additionally needs a crypto backend for its D-Bus
# session), so a single unconditional feature set can't cover more than one OS.
[target.'cfg(windows)'.dependencies]
# Windows Credential Manager.
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Secret Service over D-Bus (GNOME Keyring / KWallet). `crypto-rust` supplies the session
# cipher in pure Rust; the sync-secret-service backend links the system libdbus-1, so the
# Linux CI jobs install `libdbus-1-dev`.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Keychain via the Security framework. Note: this backend is not exercised by our CI
# (self-hosted Windows + Linux only) and macOS is not yet a build/release target, so it's
# validated only at dependency-resolution time, not compiled or run.
keyring = { version = "3", features = ["apple-native"] }

# Any other target falls back to the in-memory mock store so the crate still compiles.
[target.'cfg(not(any(windows, target_os = "linux", target_os = "macos")))'.dependencies]
keyring = "3"
